2004-08-09 14:38  Alexander Malmberg <alexander@malmberg.org>

	* Headers/AppKit/NSWindow.h: _frame is the window frame.
	(+screenRectForFrameRect:styleMask:,
	+frameRectForScreenRect:styleMask:): New methods.
	* Source/GSDisplayServer.m (-window:::, -styleoffsets:::::):
	Update documentation.
	* Source/GSStandardWindowDecorationView.m
	(+screenOffsets::::forStyleMask:): Implement new method.
	* Source/GSWindowDecorationView.h (+screenRectForFrameRect:styleMask:,
	+frameRectForScreenRect:styleMask:): New methods.
	* Source/GSWindowDecorationView.m (+screenOffsets::::forStyleMask:,
	+screenRectForFrameRect:styleMask:,
	+frameRectForScreenRect:styleMask:): Implement them.
	* Source/NSWindow.m (+screenRectForFrameRect:styleMask:,
	+frameRectForScreenRect:styleMask:): Implement new methods.
	(-_initBackendWindow): Always update _wv's frame.

2004-08-08  Quentin Mathe <qmathe@club-internet.fr>

	* Source/NSComboBox.m:
        * Source/NSComboBoxCell.m:
        Fixed the class description markup errors which caused text 
	truncations in the documentation.

2004-08-08 01:19  Chad Hardin <cehardin@mac.com>

	* Source/NSPageLayout.m: Ensure that the units on the panel
	are set.  Using -viewWithTag:, I had to make sure I called
	the view immediately above the view I was loking for.

2004-08-08 00:43  Chad Hardin <cehardin@mac.com>

	* config.make.in: Added CUPS specific make variables.
	* configure: Regenerated.
	* configure.ac: Added code to detect the presence of 
	cups for the new GSCUPS printing backend bundle.
	Detects cups but the GSCUPS bundle is not ready yet
	so it does not actually try to build anything related
	to cups.
	* Headers/AppKit/NSPrinter.h:
	* Source/NSPrinter.m:
	* Printing/GSLPR/GSLPRPrinter.m:
	NSPrinter no longer assumes it is PPD specific.  However,
	it does include a catagory named PPDParsing, which the
	backend printing bundles can call to have a PPD file parsed
	and placed into NSPrinter's tables.  All the PPD parsing code